--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,11 @@ jobs:
           with:
             python-version: '3.10'
 
+        - name: Install dependencies
+          shell: bash
+          run: |
+            cd gui && make install && cd ..
+
         - name: Run build
           shell: bash
           run: |
